--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "build-your-react",
+  "name": "build-your-own-react",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
